--- a/Improving.Mediatr/Improving.MediatR.nuspec
+++ b/Improving.Mediatr/Improving.MediatR.nuspec
@@ -1,22 +1,16 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Improving.MediatR</id>
+    <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <!--<licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>-->
-    <!--<projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>-->
-    <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
+    <projectUrl>https://github.com/improvingenterprises/Improving.MediatR</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Initial version of nuget package.</releaseNotes>
-    <copyright>Copyright 2012</copyright>
-    <!--<tags>Tag1 Tag2</tags>-->
-    <dependencies>
-      <group>
-      </group>
-    </dependencies>
+    <releaseNotes>Initial release.</releaseNotes>
+    <copyright>Copyright 2015</copyright>
+    <tags>mediatr castle windsor</tags>
   </metadata>
 </package>
