--- a/Improving.Mediatr/Improving.MediatR.csproj
+++ b/Improving.Mediatr/Improving.MediatR.csproj
@@ -88,6 +88,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Batch\BatchExtensions.cs" />
     <Compile Include="Batch\BatchMediator.cs" />
     <Compile Include="Batch\BatchOf.cs" />
